@startuml

title __MOVABLE's Class Diagram__\n

  namespace Model.Pieces {
    namespace Movable {
      class Model.Pieces.Movable.BeastRider {
          + BeastRider()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      class Model.Pieces.Movable.Dragon {
          + Dragon()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      class Model.Pieces.Movable.Elf {
          + Elf()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      class Model.Pieces.Movable.Knight {
          + Knight()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      class Model.Pieces.Movable.Mage {
          + Mage()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      class Model.Pieces.Movable.Sorceress {
          + Sorceress()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      abstract class Model.Pieces.Movable.SpecialMovablePiece {
          - isSpecial : boolean
          + GetIsSpecial()
          + SpecialMovablePiece()
          + setIsSpecial()
      }
    }
  }
  

  namespace Model.Pieces {
    namespace Movable {
      class Model.Pieces.Movable.UnleashedBeast {
          + UnleashedBeast()
      }
    }
  }
  

  Model.Pieces.Movable.BeastRider -up-|> Model.Pieces.MovablePiece
  Model.Pieces.Movable.Dragon -up-|> Model.Pieces.MovablePiece
  Model.Pieces.Movable.Elf -up-|> Model.Pieces.MovablePiece
  Model.Pieces.Movable.Knight -up-|> Model.Pieces.MovablePiece
  Model.Pieces.Movable.Mage -up-|> Model.Pieces.MovablePiece
  Model.Pieces.Movable.Sorceress -up-|> Model.Pieces.MovablePiece
  Model.Pieces.Movable.SpecialMovablePiece -up-|> Model.Pieces.MovablePiece
  Model.Pieces.Movable.UnleashedBeast -up-|> Model.Pieces.MovablePiece


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
